# jansiexkernel

./: README.md  pyproject.toml
example/: example.ipynb
jansiexkernel/: kernel.json
src/jansiexkernel/: __main__.py  install_kernelspec.py  kernel.py
